--- a/src/components/Greeting/styles.scss
+++ b/src/components/Greeting/styles.scss
@@ -7,9 +7,9 @@ $breakpoint: 960px;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 100vh;
   
   @media screen and (min-width: $breakpoint) {
+    height: 100vh;
     flex-direction: row;
   }
 
@@ -29,6 +29,7 @@ $breakpoint: 960px;
       z-index: 10;
       position: absolute;
       overflow: visible !important;
+      z-index: 10;
     }
     
     &-shape {
