--- a/src/theme/reset.scss
+++ b/src/theme/reset.scss
@@ -61,7 +61,20 @@ a {
     outline-width: 0;
   }
 }
-
+main {
+  max-width: 20rem;
+  padding: 1.2rem;
+  margin: auto;
+  @media screen and (min-width: 540px ) {
+    max-width: 36rem;
+  }
+  @media screen and (min-width: 960px ) {
+    max-width: 55rem;
+  }
+}
+section {
+  margin-bottom: 2rem;
+}
 abbr[title] {
   border-bottom: none;
   text-decoration: underline;
