--- a/src/theme/reset.scss
+++ b/src/theme/reset.scss
@@ -65,10 +65,11 @@ main {
   max-width: 20rem;
   padding: 1.2rem;
   margin: auto;
-  @media screen and (min-width: 540px ) {
+  overflow: hidden;
+  @media screen and ( min-width: 540px ) {
     max-width: 36rem;
   }
-  @media screen and (min-width: 960px ) {
+  @media screen and ( min-width: 960px ) {
     max-width: 55rem;
   }
 }
