--- a/src/components/Greeting/styles.scss
+++ b/src/components/Greeting/styles.scss
@@ -45,26 +45,26 @@ $breakpoint: 960px;
       height: 50%;
       mix-blend-mode: saturation;
       opacity: .7;
-      transition: border-radius 4s ease, transform 4s ease;
+      transition: border-radius 4s ease-in-out, transform 4s ease-in-out;
       will-change: border-radius, transform;
   
       &--1 {
         border-radius: 76% 24% 68% 32% / 53% 26% 74% 47%;
-        transform: rotateX(-165deg);
+        transform: rotate(-165deg);
         background-image: linear-gradient(45deg, #fffbd5 0%, #b20a2c 100%);
         width: 240px;
         height: 200px;
       }
       &--2 {
         border-radius: 27% 73% 35% 65% / 15% 68% 32% 85%;
-        transform: rotateX(33deg);
+        transform: rotate(33deg);
         background-image: linear-gradient(45deg, #22c1c3 0%, #fdbb2d 100%);
         width: 220px;
         height: 160px;
       }
       &--3 {
         border-radius: 39% 61% 55% 45% / 49% 68% 32% 51%;
-        transform: rotateX(10deg);
+        transform: rotate(10deg);
         background-image: linear-gradient(45deg, rgb(143, 121, 221) 0%, rgb(52, 50, 189) 100%);
         width: 200px;
         height: 200px;
@@ -89,6 +89,31 @@ $breakpoint: 960px;
       font-size: 5rem;
     }
 
+  }
+  &__emoji {
+    display: inline-block;
+    &--wave {
+      animation: wave 1s 2s;
+      transform-origin: bottom center;
+    }
+    &--tada {
+      animation: tada 1s 2s;
+    }
+    &--purple {
+      animation: purple 1s 2s forwards;
+      &:before {
+        content: "🛸";
+        opacity: 0;
+        position: absolute;
+        animation: appear .5s 3s forwards;
+      }
+    }
+    &--bump {
+      animation: bump 1s 2s;
+    }
+    &--shake {
+      animation: shake 1s 2s;
+    }
   }
   &__lead {
     font-size: 1.5rem;
