--- a/src/components/Greeting/styles.scss
+++ b/src/components/Greeting/styles.scss
@@ -117,7 +117,10 @@ $breakpoint: 960px;
   }
   &__lead {
     font-size: 1.5rem;
-    line-height: 1.2;
     font-weight: normal;
+    line-height: 1.6;
+    @media screen and (min-width: $breakpoint) {
+      line-height: 1.2;
+    }
   }
 }
