--- a/src/components/SocialLinks/styles.module.scss
+++ b/src/components/SocialLinks/styles.module.scss
@@ -1,4 +1,4 @@
-$block: "SocialLinks";
+$block: "socialLinks";
 
 .#{$block} {
   display: flex;
@@ -7,12 +7,11 @@ $block: "SocialLinks";
   justify-content: space-between;
   max-width: 10rem;
   
-  &__item {
+  &Item {
     width: 100%;
     &:not(:last-child) {
       margin-right: .5rem;
     }
   }
   
-
 }
